fixes and changes added